--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&display=swap" rel="stylesheet">
     <title>Salmon Cookies</title>
     <a rel="stylesheet" src="stylesheet.css"></a>
 </head>
@@ -11,7 +12,7 @@
         <h1>SALMON COOKIES!</h1>
         <img src="Photos/salmon.png" alt="logo">
     </header>
-
+<a href="sales.html">Sales Report!</a>
 
     
 </body>
