--- a/sales.html
+++ b/sales.html
@@ -7,7 +7,11 @@
     <a rel="stylesheet" src="stylesheet.css"></a>
 </head>
 <body>
-    <ul>
+    <h1>THIS IS THE SALES REPORT!</h1>
+    <ul id="salesreport">
+
+    </ul>
+    <ul id="saleshours">
 
     </ul>
 
