--- a/sales.html
+++ b/sales.html
@@ -8,12 +8,9 @@
 </head>
 <body>
     <h1>THIS IS THE SALES REPORT!</h1>
-    <ul id="salesreport">
+    <table id="salesreport">
 
-    </ul>
-    <ul id="saleshours">
-
-    </ul>
+    </table>
 
     <script src="app.js"></script>
 </body>
