--- a/sales.html
+++ b/sales.html
@@ -9,6 +9,53 @@
 <body>
     <h1>THIS IS THE SALES REPORT!</h1>
     <table id="salesreport">
+        <tr>
+            <td>
+                6 AM
+            </td>
+            <td>
+                7 AM
+            </td>
+            <td>
+                8 AM
+            </td>
+            <td>
+                9 AM
+            </td>
+            <td>
+                10 AM
+            </td>
+            <td>
+                11 AM
+            </td>
+            <td>
+                12 PM
+            </td>
+            <td>
+                1 PM
+            </td>
+            <td>
+                2 PM
+            </td>
+            <td>
+                3 PM
+            </td>
+            <td>
+                4 PM
+            </td>
+            <td>
+                5 PM
+            </td>
+            <td>
+                6 PM
+            </td>
+            <td>
+                7 PM
+            </td>
+            <td>
+                Daily Total
+             </td>
+        </tr>
 
     </table>
 
